--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "firebase": "^10.14.1",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
     "react": "^18",
