--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^10.14.1",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "playwright": "^1.49.1",
     "puppeteer": "^23.11.1",
     "react": "^18",
     "react-dom": "^18",
