--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "ngrok": "^5.0.0-beta.2",
     "puppeteer": "^23.11.1",
     "react": "^18",
     "react-dom": "^18",
