--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "firebase": "^10.14.1",
+    "firebase": "^11.4.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.436.0",
-    "next": "14.2.6",
+    "next": "^14.2.25",
     "ngrok": "^5.0.0-beta.2",
     "puppeteer": "^23.11.1",
     "react": "^18",
@@ -27,6 +27,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
     "recharts": "^2.15.1",
+    "swiper": "^11.2.5",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
